theme/static/css/styles.css
/* TODO:
 * - second ornament as content (or footer) separator
 */

html, body {
  height: 100%;
}

body {
  font-family: 'IBM Plex Serif', serif;
  margin: 0;
}

a {
  color: #28a;
  text-decoration: none;
}

h1, h2, h3 {
  margin: 0;
}

img {
  vertical-align: bottom;
}

.container {
  width: 100%;
  height: 100%;
}

.header {
  flex-shrink: 0;
  display: flex;
}

.logo-wrapper, .headline {
  height: 8.75rem; 
}

.logo-wrapper, .navigation {
  width: 12.5rem;
}

.links-div {
  border-bottom: 1px solid #000;
}

.logo-wrapper {
  display: flex;
  justify-content: center;
  border-right: 1px solid #000;
  flex-shrink: 0;
}

.logo {
  height: 6.25rem;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

.headline {
  padding-left: 3rem;
  padding-right: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.title {
  font-size: 2em;
  font-weight: bold;
  margin-bottom: 0.75rem;
}

.subtitle {
  font-style: italic;
}

.below-header {
  min-height: calc(100% - 8.75rem);
  flex-shrink: 0;
  flex-grow: 1;
  display: flex;
}

.links-div, .content {
  padding: 1.5rem 3rem;
}

.navigation {
  flex-shrink: 0;
  box-sizing: border-box;
  white-space: nowrap;
  border-top: 1px solid #000;
  overflow: hidden;
}

.navigation ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.nav-item, .nav-separator {
  text-align: center;
}

.nav-item {
  padding: 0.5rem 0;
}

.nav-item a {
  color: #000;
}

.nav-separator::after {
  color: #28a;
  content: "\02022";
}

.main {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  border-left: 1px solid #000;
  min-height: calc(100% - 5rem);
}

.content {
  flex-grow: 1;
  border-top: 1px solid #000;
  border-bottom: 1px solid #000;
}

.page-title {
  font-size: 1.8em;
  margin-bottom: 1.5rem;
}

.page-content {
}

.footer {
  flex-shrink: 0;
  height: 5rem;
}

.ornament {
  height: 3rem;
}

.footer {
  display: flex;
  justify-content: space-around;
  /* background-color: #000;
  color: #fff; */
  font-size: .8em;
  margin-bottom: 0;
}

.footer div {
  padding: 1rem;
  /* padding: 48px; */
  margin-top: auto;
  margin-bottom: auto;
}

/* Mobile styles
 * ********************************************/


@media (max-width: 30em) {
  .logo-wrapper, .navigation {
    width: 6rem;
  }

  .logo-wrapper, .headline {
    height: 6rem;
  }

  .below-header {
    min-height: calc(100% - 6rem);
  }

  .logo {
    height: 4rem;
  }

  .headline {
    padding-left: 1.5rem;
  }

  .title {
    font-size: 1.8em;
  }

  .subtitle {
    display: none;
  }

  .navigation, .content {
    padding: 0.5rem 1rem;
  }

  .footer {
    font-size: 0.6em;
  }

  .footer div {
    padding: 1.5rem;
  }

  .ornament-div {
    display: none;
  }

}


/* Page-specific styles
 * ********************************************/

/* Projects page */
.project-item {
  margin-top: 1.5rem;
  margin-bottom: 2.25rem;
}

.project-title {
  font-size: 1.2em;
  font-weight: bold;
  margin-bottom: 0.75rem;
}

.project-separator {
  text-align: center;
  height: 1.875rem;
  background: url('../images/ornament1blue.svg') transparent center no-repeat;
  background-size: 2.6875rem 1.875rem;
}

